--- a/Projet/index.html
+++ b/Projet/index.html
@@ -22,8 +22,8 @@
     <header>
         <nav>
             <div class="container">
-                <img src="../Logo.png" alt="logo">
-
+                <a href="../Main/index.html"><img src="../Logo.png" alt="logo"></a>
+                
                 <div class="menu">
                     <a href="../Main/index.html">Accueil</a>
                     <a class="is-active" href="../Projet/index.html">Le Projet</a>
