--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-  <head><meta http-equiv="Refresh" content="0; url=/STI2Poules/Main/index.html" /></head>
+  <head><meta http-equiv="Refresh" content="0; url=/Main/index.html" /></head>
 </html>
