--- a/Main/index.html
+++ b/Main/index.html
@@ -11,7 +11,8 @@
     <!-- Police -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;
+        0,600;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
 
     <!-- Font Awesomme -->
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
@@ -25,7 +26,9 @@
     <header>
         <nav>
             <div class="container">
-                <img src="../Logo.png" alt="logo">
+                
+                <a href="../Main/index.html"><img src="../Logo.png" alt="logo"></a>
+                <!-- <img src="../Logo.png" alt="logo"> -->
 
                 <div class="menu">
                     <a class="is-active" href="../Main/index.html">Accueil</a>
@@ -54,30 +57,22 @@
         <!-- Section 1 -->
         <div class="Section1">
             <div class="Section1-1">
-                <div class="Content"></div>
-                <p>
-                    Section1.1
-                </p>
+                <div class="Content1"></div>
             </div>
             <div class="Section1-2">
-                <p>
-                    Section1.2
-                </p>
+                <div class="Separator1"></div>
             </div>
             <div class="Section1-3">
-                <div class="Content">
-                    <h1 class="Titre1">Le Projet</h1>
-                    <div class="Barre1"></div>
+                <div class="Content2">
+                    <h1>Le Projet</h1>
+                    <div></div>
                     <h4>Poulailler connecté</h4>
-                    <p>Le projet consiste à créer un poulailler autonome le plus longtemps
-                     possible. Il est rempli de capteur, de caméra et de toutes autres 
-                     électroniques permettant  de savoir la quantité d’eau, de savoir 
-                     si la porte est  ouverte ou fermée, de remettre à manger et à boire... </p>
+                    <p>Le projet consiste à créer un poulailler autonome le plus
+                     longtemps possible. Il est rempli de capteur, de caméra et de toutes autres
+                     électroniques permettant de savoir la quantité d’eau, de savoir si la
+                     porte est ouverte ou fermée, de remettre à manger et à boire...</p>
                     <a href="../Projet/index.html">En savoir plus</a>
                 </div>
-                <p>
-                    Section1.3
-                </p>
             </div>
         </div>
         <!-- Ruban 1 -->
@@ -101,19 +96,22 @@
         <!-- Section 2 -->
         <div class="Section2">
             <div class="Section2-1">
-                <p>
-                    Section2.1
-                </p>
+                <div class="Content3">
+                    <h1>Nos Poules</h1>
+                    <div></div>
+                    <h4>Les Besties à bec</h4>
+                    <p>Nos poules, se sont les meilleurs elles seront dopées aux stéroïdes. Ce qui
+                     leur permettra de faire des oeufs aussi gros que the Rock ou dwane Joanson
+                     pour les intimes. Quand elles ne feront plus d'oeufs on pourra avoir du poulet
+                     à la kantoche, cela fera plaisir à tout le monde en plus...</p>
+                    <a href="../Poules/index.html">En savoir plus</a>
+                </div>
             </div>
             <div class="Section2-2">
-                <p>
-                    Section2.2
-                </p>
+                <div class="Separator2"></div>
             </div>
             <div class="Section2-3">
-                <p>
-                    Section2.3
-                </p>
+                <div class="Content4"></div>
             </div>
         </div>
         <!-- Ruban 2 -->
@@ -137,19 +135,22 @@
         <!-- Section 3 -->
         <div class="Section3">
             <div class="Section3-1">
-                <p>
-                    Section3.1
-                </p>
+                <div class="Content5"></div>
             </div>
             <div class="Section3-2">
-                <p>
-                    Section3.2
-                </p>
+                <div class="Separator3"></div>
             </div>
             <div class="Section3-3">
-                <p>
-                    Section3.3
-                </p>
+                <div class="Content6">
+                    <h1>Notre Classe</h1>
+                    <div></div>
+                    <h4>Une classe soudée</h4>
+                    <p>Ce projet est pris en charge par la classe de STi2D de Saint Marc. Nous
+                     avons pris très à coeur, en oeuvrant sur de nombreuses idées. Notre Classe
+                     est très serieuse qui sait s'impliquer dans un projet. Un esprit d'équipe
+                     s'est dévelopé lors du projet...</p>
+                    <a href="../STI2D/index.html">En savoir plus</a>
+                </div>
             </div>
         </div>
         <!-- Ruban 3 -->
