--- a/STI2D/index.html
+++ b/STI2D/index.html
@@ -22,7 +22,7 @@
     <header>
         <nav>
             <div class="container">
-                <img src="../Logo.png" alt="logo">
+                <a href="../Main/index.html"><img src="../Logo.png" alt="logo"></a>
 
                 <div class="menu">
                     <a href="../Main/index.html">Accueil</a>
