--- a/Main/index.html
+++ b/Main/index.html
@@ -15,7 +15,7 @@
         0,600;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
 
     <!-- Font Awesomme -->
-    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <script src="https://kit.fontawesome.com/65235d7a06.js" crossorigin="anonymous"></script>
     
     <!-- Titre de la page -->
     <title>STI2Poules</title>
@@ -78,19 +78,13 @@
         <!-- Ruban 1 -->
         <div class="Ruban1">
             <div class="Ruban1-1">
-                <p>
-                    Ruban1.1
-                </p>
+                <p>3 Poules</p>
             </div>
             <div class="Ruban1-2">
-                <p>
-                    Ruban1.2
-                </p>
+                <p>Superficie : 18m²</p>
             </div>
             <div class="Ruban1-3">
-                <p>
-                    Ruban1.3
-                </p>
+                <p>Connecté</p>
             </div>
         </div>
         <!-- Section 2 -->
@@ -117,19 +111,13 @@
         <!-- Ruban 2 -->
         <div class="Ruban2">
             <div class="Ruban2-1">
-                <p>
-                    Ruban2.1
-                </p>
+                <p>Cycle Naturel</p>
             </div>
             <div class="Ruban2-2">
-                <p>
-                    Ruban2.2
-                </p>
+                <p>Durable</p>
             </div>
             <div class="Ruban2-3">
-                <p>
-                    Ruban2.3
-                </p>
+                <p>Liberté</p>
             </div>
         </div>
         <!-- Section 3 -->
@@ -156,19 +144,13 @@
         <!-- Ruban 3 -->
         <div class="Ruban3">
             <div class="Ruban3-1">
-                <p>
-                    Ruban3.1
-                </p>
+                <p>20 éleves</p>
             </div>
             <div class="Ruban3-2">
-                <p>
-                    Ruban3.2
-                </p>
+                <p>Un Projet Commun</p>
             </div>
             <div class="Ruban3-3">
-                <p>
-                    Ruban3.3
-                </p>
+                <p>x€ de Budget</p>
             </div>
         </div>
     </trunk>
